[tool]
[tool.poetry]
name = "pytor"
version = "0.1.9"
description = "Manage Tor hidden services keys"
license = "WTFPL"
classifiers = ["Programming Language :: Python", "Development Status :: 1 - Planning", "License :: OSI Approved :: BSD License", "Natural Language :: English", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7"]
homepage = "http://github.com/cmehay/pytor"
repository = "https://pypi.org/project/pytor/"
authors = ["Christophe Mehay <cmehay@nospam.student.42.fr>"]

[tool.poetry.dependencies]
python = ">= 3.6.12, < 3.11"
pycryptodome = ">=3.9.4"
fire = ">=0.3.1"
pyyaml = ">=5.3.1"

[tool.poetry.dev-dependencies]
tox = "*"
pre-commit = ">=2.8.2"
ptpython = "*"
pylama = "*"
pylint = "*"
pytest = "*"
black = "^20.8b1"
pyfakefs = "^4.3.0"

[tool.poetry.scripts]
pytor = "pytor.__main__:main"

[build-system]
requires = [
    "poetry >= 1.0.9",
]
build-backend = "poetry.masonry.api"
